# Windows-Font-Replacement-Tool

./: .gitignore  README.md  README_legacy.md  functions.py  main.py  uitools.py
CSharpCode/: App.xaml  App.xaml.cs  CSharpCode.sln  MainWindow.xaml  MainWindow.xaml.cs  README.md  Windows-Font-Replacement-Tool.csproj
CSharpCode/Controls/: Animations.xaml  ButtonStyles.xaml  CollapsableCard.xaml  CollapsableCard.xaml.cs  ColorBrushes.xaml  CustomTaskBox.xaml.cs  CustomTaskRow.xaml  CustomTaskRow.xaml.cs  Labels.xaml
CSharpCode/Framework/: Config.cs  FontValidation.cs  HashTab.cs  MultipleReplace.cs  ReplaceTask.cs  ReplaceThread.cs  SingleReplace.cs  Utilities.cs  Validation.cs
CSharpCode/Sections/: MultipleRepTab.xaml  MultipleRepTab.xaml.cs  SingleRepTab.xaml  Utilities.xaml  Utilities.xaml.cs
Libs/: about.txt  dataLibs
Libs/xmls/: SegUIVar.xml  msyhb01.xml  msyhb02.xml  msyhl01.xml  msyhl02.xml  msyhr01.xml  msyhr02.xml  segoeui.xml  segoeuib.xml  segoeuii.xml  segoeuil.xml  segoeuisl.xml  segoeuiz.xml  seguibl.xml  seguibli.xml  seguili.xml  seguisb.xml  seguisbi.xml  seguisli.xml
PythonCodes/: README.md  functions.py  main.py  pyproject.toml
src/: WFRT.sln
src/FontReader/: Debug.cs  Font.cs  FontCollection.cs  FontReader.csproj
src/FontReader/Framework/: ITable.cs  Table.cs  Utilities.cs
src/FontTool/: Font.cs  FontCollection.cs  FontTool.csproj
src/FontTool/Framework/: ITable.cs  Table.cs  Utilities.cs
src/Windows-Font-Replacement-Tool/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Windows-Font-Replacement-Tool.csproj
(+39 files in other folders)
