[project]
name = "windows-font-replacement-tools-python-script"
version = "3.0"
authors = [{name = "SummerFleur"}]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["fonttools==4.53.1"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
